# snow

./: .gitignore  Simulated_Daylight_Cycle.csv  Simulated_Sky_Light_Intensity_and_Color.csv  daylight_simulate.csv  minute_data.csv
clab2_bkp/: CMakeLists.txt.bak  rasterizer.hpp.bak  task2.cpp  task3.cpp
common_models/: daylight_simulate
models/: football.mtl  grass.blend  grass7.obj.mtl  icosphere6.blend  icosphere8.blend1
presentation/: .~lock.presentation.odp#  Presentation.txt  StatueOfLiberty.asf
report/: color_map_legend.py  hello.fdb_latexmk  hello.fls  hello.tex  neurips_2023.sty  report.pptx  report.tex
report/images/: L35S.asf  L60N.asf  StatueOfLiberty.avi
s/: day_time_temperature.py  daylight_simulate.py
snowgl/: CMakeLists.txt  README.md  ShadowMapping.frag  ShadowMapping.vert  grass.blend1  icosphere8.mtl  main.cpp  main.cpp.bad  main.cpp.bkp
snowgl/common/: OBJ_Loader.h  controls.cpp  controls.hpp  csv_reader.cpp  csv_reader.hpp  global.hpp  objloader.cpp  util.cpp  util.hpp
snowgl/data/: data.csv  day_time_simulator.py
snowgl/model/: Untitled.xcf  dds.dds  simple.blend  simple.blend1  simple.blend11  simple.mtl
snowgl/models/: football.mtl  grass.mtl
snowgl/shader/: ShadowMapping.frag
snowgl/shaders/: ShadowMapping.frag  ShadowMapping.vert
snowgl/src/: OcclusionRTT.frag  ShadowMapping.frag  ShadowMapping.vert  SnowGL  global.hpp  icosphere6.mtl  main.cpp  main2.cpp2
snowgl/tutorial16_shadowmaps/: tutorial16.cpp  tutorial16_shadowmaps
src/: Shader.cpp  install.sh.bak  main.cpp  main.cpp.bak  rasterizer.cpp  rasterizer.hpp
src_2/: CMakeLists..bak  CMakeLists.txt  CSV_Reader.cpp  CSV_Reader.hpp  MVP.cpp  MVP.hpp  MVP.hpp.bak  README.md  README.txt  RandomNumber.cpp.bak  RandomNumber.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.cpp.bak  Texture.hpp  Triangle.cpp.bak  Triangle.hpp.bak  config.ini  global.hpp  global.hpp.bak  main.cpp  rasterizer.cpp  rasterizer.cpp.bak  rasterizer.hpp  snow.cpp  snow.hpp  task2.cpp.REMOVEME
src_bkp/: CMakeLists.txt.bak  Texture.cpp.bak  rasterizer.cpp.bak
tutorial_16_bkp/: ShadowMapping_SimpleVersion.fragmentshader  SimpleTexture.fragmentshader  tutorial16.cpp.bak  tutorial16_shadowmaps  tutorial16_shadowmaps_simple
